<resources>
    <string name="app_name">Kettle Control</string>

    <string name="action_settings">Settings</string>
    <string name="button_power">On/Off</string>
    <string name="button_warm">Warm</string>
    <string name="button_65">65C</string>
    <string name="button_80">80C</string>
    <string name="button_95">95C</string>
    <string name="button_100">100C</string>

    <string name="status_string">Unknown Status</string>
    <string name="connected">Not Connected</string>
</resources>
