<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_power"
            android:id="@+id/button_power"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/textView"
            android:layout_alignEnd="@+id/textView"
            android:clickable="true"
            android:onClick="ButtonOnClick" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_warm"
            android:id="@+id/button_warm"
            android:layout_above="@+id/button_80"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/textView"
            android:layout_alignEnd="@+id/textView"
            android:clickable="true"
            android:onClick="ButtonOnClick" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_65"
            android:id="@+id/button_65"
            android:layout_below="@+id/button_80"
            android:layout_alignLeft="@+id/button_80"
            android:layout_alignStart="@+id/button_80"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:onClick="ButtonOnClick" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_80"
            android:id="@+id/button_80"
            android:layout_below="@+id/button_95"
            android:layout_alignLeft="@+id/button_95"
            android:layout_alignStart="@+id/button_95"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:onClick="ButtonOnClick" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_95"
            android:id="@+id/button_95"
            android:layout_below="@+id/button_100"
            android:layout_alignLeft="@+id/button_100"
            android:layout_alignStart="@+id/button_100"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:onClick="ButtonOnClick" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_100"
            android:id="@+id/button_100"
            android:layout_alignTop="@+id/button_power"
            android:layout_toRightOf="@+id/button_power"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:onClick="ButtonOnClick" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Status"
            android:id="@+id/textView"
            android:layout_below="@+id/button_65"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="69dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/status_string"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:textColor="#ff000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/connected"
            android:id="@+id/textView3"
            android:layout_below="@+id/button_65"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</ScrollView>
